Possible fix for known issue where the mobile views contain large amounts of white space on the right side of the screen, added some SEO meta that I forgot to fill out way earlier in production.

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,14 @@ html, body {
     background-image: url(./assets/images/site-bg.png);
 }
 
+/* Ensures the white space of the page always fits. */
+
+@media (min-width: 320px) and (max-width: 641px) {
+    html {
+        width: 116%;
+    }
+}
+
 /* Scrollbar Style */
 
 body::-webkit-scrollbar {
